--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ border-radius: 10px;
     <div class="heart">❤️</div>
 
     <!-- Add image shown during the question -->
-    <img src="images/your-question-image.jpg" alt="Asking you to be my Valentine" id="question-image">
+    <img src="your-question-image.jpg" alt="Question Image">
 
     <p>And I know I took long to ask and you've been expecting this question...</p>
 
@@ -65,9 +65,10 @@ border-radius: 10px;
     <button class="button" onclick="valentineAnswer('no')">No, I won't!</button>
 
     <!-- Images for response -->
-    <img id="yes-response" src="images/our-photo.jpg" alt="Us together" class="hidden">
-    <img id="no-response" src="images/broken-heart.jpg" alt="Broken Heart" class="hidden">
+    <!-- If she says Yes -->
+<img src="us-together.jpg" alt="Us Together">
 
+<img id="broken-heart" src="broken-heart.jpg" alt="Broken Heart" class="hidden">
     <script>
         function valentineAnswer(answer) {
             // Hide the question image
