--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             font-size: 1.2em;
             padding: 15px 30px;
             border: none;
-border-radius: 10px;
+            border-radius: 10px;
             cursor: pointer;
             transition: 0.3s;
             margin: 10px;
@@ -52,42 +52,31 @@ border-radius: 10px;
 </head>
 <body>
 
-    <h1>Will you be my Valentine?</h1>
-    <p>I know you are busy with exams ...</p>
+    <h1>Will you be my Valentine?</h1><p>I've been thinking about how lucky I am to have you in my life...</p>
     <div class="heart">❤️</div>
 
-    <!-- Add image shown during the question -->
+    <!-- Add your photo here -->
     <img src="your-question-image.jpg" alt="Question Image">
 
-    <p>And I know I took long to ask and you've been expecting this question...</p>
+    <p>So, here's a little website to ask you the most important question...</p>
 
     <button class="button" onclick="valentineAnswer('yes')">Yes, I will!</button>
     <button class="button" onclick="valentineAnswer('no')">No, I won't!</button>
 
-    <!-- Images for response -->
-    <!-- If she says Yes -->
-<img src="us-together.jpg" alt="Us Together">
+    <!-- Broken Heart Image (hidden initially) -->
+    <img id="broken-heart" src="broken-heart.jpg" alt="Broken Heart" class="hidden">
 
-<img id="broken-heart" src="broken-heart.jpg" alt="Broken Heart" class="hidden">
     <script>
         function valentineAnswer(answer) {
-            // Hide the question image
-document.getElementById('question-image').classList.add('hidden');
-
             if (answer === 'yes') {
-                // Show the image of you two together
-                document.getElementById("yes-response").classList.remove("hidden");
-                alert('Yay! I am so happy you said YES! ❤️ I miss you so much I cant wait to see you again♥️♥️ ');
+                alert('Yay! I am so happy you said YES! ❤️');
             } else if (answer === 'no') {
-                // Show the Broken Heart image
-                document.getElementById("no-response").classList.remove("hidden");
-                
-                // Ask if they are sure
-                const sureAnswer = confirm("Are you sure your answer is NO?🥲 (Press ok to continue with NO, Cancel to STOP)");
+                const sureAnswer = confirm("UKO SURE ANSWER NI NO?🥲(Press ok to Continue with NO, Cancel to STOP)");
                 if (sureAnswer === false) {
                     alert("GOTCHA!!! YOU ALREADY ARE MY VALENTINE BAE ❤️");
                 } else {
-                    alert("NKT! HEBU RUDI NYUMA NA UFINYE YES 😂");
+                    document.getElementById("broken-heart").classList.remove("hidden");
+                    alert("NKT!HEBU ANZA AFRESH NA UFINYE YES😂");
                 }
             }
         }
@@ -95,5 +84,3 @@ document.getElementById('question-image').classList.add('hidden');
 
 </body>
 </html>
-
-
