--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         p {
             font-size: 1.5em;
-margin-bottom: 40px;
+            margin-bottom: 40px;
         }
         .heart {
             font-size: 5em;
@@ -31,7 +31,7 @@ margin-bottom: 40px;
             font-size: 1.2em;
             padding: 15px 30px;
             border: none;
-            border-radius: 10px;
+border-radius: 10px;
             cursor: pointer;
             transition: 0.3s;
             margin: 10px;
@@ -57,7 +57,7 @@ margin-bottom: 40px;
     <p>I've been thinking about how lucky I am to have you in my life...</p>
     <div class="heart">❤️</div>
 
-    <!-- Add your photo here -->
+    <!-- Add your question image here -->
     <img src="your-question-image.jpg" alt="Question Image">
 
     <p>So, here's a little website to ask you the most important question...</p>
@@ -65,26 +65,31 @@ margin-bottom: 40px;
     <!-- The buttons -->
     <button class="button" onclick="valentineAnswer('yes')">Yes, I will!</button>
     <button class="button" onclick="valentineAnswer('no')">No, I won't!</button>
-<!-- Broken Heart Image (hidden initially) -->
+
+    <!-- Hidden Images (initially) -->
+    <img id="us-together" src="us-together.jpg" alt="Us Together" class="hidden">
     <img id="broken-heart" src="broken-heart.jpg" alt="Broken Heart" class="hidden">
 
     <script>
         function valentineAnswer(answer) {
+// Hide the images before we show the right one
+            document.getElementById("us-together").classList.add("hidden");
+            document.getElementById("broken-heart").classList.add("hidden");
+
             // If the answer is YES
             if (answer === 'yes') {
-                alert('Yay! I am so happy you said YES! ❤️');
-                // Show us-together image (you can set this to show here)
+                document.getElementById("us-together").classList.remove("hidden"); // Show us-together image
+                alert('Yay! I am so happy you said YES! ❤️,,,Cant wait to see you again♥️
+(Scroll down)');
             } 
             // If the answer is NO
             else if (answer === 'no') {
-                // Confirm the answer again
                 const sureAnswer = confirm("UKO SURE ANSWER NI NO?🥲(Press ok to Continue with NO, Cancel to STOP)");
                 if (sureAnswer === false) {
                     alert("GOTCHA!!! YOU ALREADY ARE MY VALENTINE BAE ❤️");
                 } else {
-                    // Show broken heart image after 'no'
-                    document.getElementById("broken-heart").classList.remove("hidden");
-                    alert("NKT!HEBU ANZA AFRESH NA UFINYE YES😂");
+                    document.getElementById("broken-heart").classList.remove("hidden"); // Show broken-heart image
+                    alert("BOOMBASTIC SIDE EYE,,,,NKT!HEBU ANZA AFRESH NA UFINYE YES😂😂,,,SCROLL DOWN TO SEE MY EXACT REACTION😑");
                 }
             }
         }
@@ -92,4 +97,106 @@ margin-bottom: 40px;
 
 </body>
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Be My Valentine?</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7e0e0;
+            color: #8b0000;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.5em;
+            margin-bottom: 40px;
+        }
+        .heart {
+            font-size: 5em;
+            color: #ff0000;
+        }
+        .button {
+            background-color: #ff4d4d;
+            color: white;
+            font-size: 1.2em;
+            padding: 15px 30px;
+            border: none;
+border-radius: 10px;
+            cursor: pointer;
+            transition: 0.3s;
+            margin: 10px;
+            display: inline-block;
+        }
+        .button:hover {
+            background-color: #ff3333;
+        }
+        img {
+            width: 300px;
+            height: auto;
+            margin-top: 20px;
+            border-radius: 15px;
+        }
+        .hidden {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Will you be my Valentine?</h1>
+    <p>I've been thinking about how lucky I am to have you in my life...</p>
+    <div class="heart">❤️</div>
+
+    <!-- Add your question image here -->
+    <img src="your-question-image.jpg" alt="Question Image">
+
+    <p>So, here's a little website to ask you the most important question...</p>
+
+    <!-- The buttons -->
+    <button class="button" onclick="valentineAnswer('yes')">Yes, I will!</button>
+    <button class="button" onclick="valentineAnswer('no')">No, I won't!</button>
+
+    <!-- Hidden Images (initially) -->
+    <img id="us-together" src="us-together.jpg" alt="Us Together" class="hidden">
+    <img id="broken-heart" src="broken-heart.jpg" alt="Broken Heart" class="hidden">
+
+    <script>
+        function valentineAnswer(answer) {
+// Hide the images before we show the right one
+            document.getElementById("us-together").classList.add("hidden");
+            document.getElementById("broken-heart").classList.add("hidden");
+
+            // If the answer is YES
+            if (answer === 'yes') {
+                document.getElementById("us-together").classList.remove("hidden"); // Show us-together image
+                alert('Yay! I am so happy you said YES! ❤️,,,Cant wait to see you again♥️
+(Scroll down)');
+            } 
+            // If the answer is NO
+            else if (answer === 'no') {
+                const sureAnswer = confirm("UKO SURE ANSWER NI NO?🥲(Press ok to Continue with NO, Cancel to STOP)");
+                if (sureAnswer === false) {
+                    alert("GOTCHA!!! YOU ALREADY ARE MY VALENTINE BAE ❤️");
+                } else {
+                    document.getElementById("broken-heart").classList.remove("hidden"); // Show broken-heart image
+                    alert("BOOMBASTIC SIDE EYE,,,,NKT!HEBU ANZA AFRESH NA UFINYE YES😂😂,,,SCROLL DOWN TO SEE MY EXACT REACTION😑");
+                }
+            }
+        }
+    </script>
+
+</body>
+</html>
+
 
