--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ border-radius: 10px;
                     alert("GOTCHA!!! YOU ALREADY ARE MY VALENTINE BAE ❤️");
                 } else {
                     document.getElementById("broken-heart").classList.remove("hidden"); // Show broken-heart image
-                    alert("BOOMBASTIC SIDE EYE,,,,NKT!HEBU ANZA AFRESH NA UFINYE YES😂😂NENDA CHINI TO SEE MY EXACT REACTION😑");
+                    alert("BOOMBASTIC SIDE EYE NKT!HEBU ANZA AFRESH NA UFINYE YES😂😂 NENDA CHINI TO SEE MY EXACT REACTION😑");
                 }
             }
         }
