--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ border-radius: 10px;
             // If the answer is YES
             if (answer === 'yes') {
                 document.getElementById("us-together").classList.remove("hidden"); // Show us-together image
-                alert('Yay! I am so happy you said YES! ❤️I Cant wait to see you again♥️
-(Scroll down)');
+                alert('Yay! I am so happy you said YES! ❤️');
             } 
             // If the answer is NO
             else if (answer === 'no') {
@@ -89,7 +88,7 @@ border-radius: 10px;
                     alert("GOTCHA!!! YOU ALREADY ARE MY VALENTINE BAE ❤️");
                 } else {
                     document.getElementById("broken-heart").classList.remove("hidden"); // Show broken-heart image
-                    alert("BOOMBASTIC SIDE EYE NKT!HEBU ANZA AFRESH NA UFINYE YES😂😂 SCROLL DOWN TO SEE MY EXACT REACTION😑");
+                    alert("NKT!HEBU ANZA AFRESH NA UFINYE YES😂");
                 }
             }
         }
@@ -97,5 +96,3 @@ border-radius: 10px;
 
 </body>
 </html>
-
-
