--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ color: white;
             // If the answer is YES
             if (answer === 'yes') {
                 document.getElementById("us-together").classList.remove("hidden"); // Show us-together image
-                alert('Yay! I am so happy you said YES! I MISS YOU I CANT WAIT TO SEE YOU AGAIN♥️');
+                alert('Yay! I am so happy you said YES I MISS YOU I CANT WAIT TO SEE YOU AGAIN ♥️ ');
             } 
             // If the answer is NO
             else if (answer === 'no') {
@@ -90,7 +90,7 @@ color: white;
                     alert("GOTCHA!!! YOU ALREADY ARE MY VALENTINE BAE ❤️");
                 } else {
                     document.getElementById("broken-heart").classList.remove("hidden"); // Show broken-heart image
-                    alert("NKT!HEBU ANZA AFRESH NA UFINYE YES😂ENDA CHINI UONE REACTION YANGU");
+                    alert("NKT!HEBU ANZA AFRESH NA UFINYE YES ENDA CHINI UONE REACTION YANGU😂 ");
 }
             }
         }
