--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ color: white;
     <!-- Add your question image here -->
     <img id="question-image" src="your-question-image.jpg" alt="Question Image">
 
-    <p>So, here's a little website to ask you the most important question...</p>
+    <p>And I know you have been busy with school and exams ...</p>
 
     <!-- The buttons -->
     <button class="button" onclick="valentineAnswer('yes')">Yes, I will!</button>
@@ -81,7 +81,7 @@ color: white;
             // If the answer is YES
             if (answer === 'yes') {
                 document.getElementById("us-together").classList.remove("hidden"); // Show us-together image
-                alert('Yay! I am so happy you said YES I MISS YOU I CANT WAIT TO SEE YOU AGAIN ♥️ ');
+                alert('Yay! I am so happy you said YES I MISS YOU I CANT WAIT TO SEE YOU AGAIN ♥️ ( scroll down ) ');
             } 
             // If the answer is NO
             else if (answer === 'no') {
