--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ color: white;
     <!-- Add your question image here -->
     <img id="question-image" src="your-question-image.jpg" alt="Question Image">
 
-    <p>And I know you have been busy with school and exams ...</p>
+    <p>And I know you have been busy with school and exams but...</p>
 
     <!-- The buttons -->
     <button class="button" onclick="valentineAnswer('yes')">Yes, I will!</button>
@@ -81,7 +81,7 @@ color: white;
             // If the answer is YES
             if (answer === 'yes') {
                 document.getElementById("us-together").classList.remove("hidden"); // Show us-together image
-                alert('Yay! I am so happy you said YES I MISS YOU I CANT WAIT TO SEE YOU AGAIN ♥️ ( scroll down ) ');
+                alert('Yay! I am so happy you said YES I MISS YOU I CANT WAIT TO SEE YOU AGAIN ♥️ ( sorry I took long to ask) ');
             } 
             // If the answer is NO
             else if (answer === 'no') {
@@ -90,7 +90,7 @@ color: white;
                     alert("GOTCHA!!! YOU ALREADY ARE MY VALENTINE BAE ❤️");
                 } else {
                     document.getElementById("broken-heart").classList.remove("hidden"); // Show broken-heart image
-                    alert("NKT!HEBU ANZA AFRESH NA UFINYE YES ENDA CHINI UONE REACTION YANGU😂 ");
+                    alert("NKT!HEBU ANZA AFRESH NA UFINYE YES 😂 ");
 }
             }
         }
